--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,41 +1,53 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url('Montserrat-Bold.ttf');
-    font-weight: 200;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Medium.ttf');
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Regular.ttf');
+    src: url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+    url('../fonts/Montserrat-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-}
-
-@font-face {
-    font-family: 'RoadRadio';
-    src: url('RoadRadio-Regular.ttf');
-    font-weight: 200;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+    url('../fonts/Montserrat-Medium.woff') format('woff');
+    font-weight: 500;
     font-style: normal;
-}
-
-@font-face {
-    font-family: 'RoadRadio';
-    src: url('RoadRadio.ttf');
-    font-weight: 300;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+    url('../fonts/Montserrat-Bold.woff') format('woff');
+    font-weight: 700;
     font-style: normal;
-}
-
-@font-face {
+    font-display: swap;
+  }
+  
+  @font-face {
     font-family: 'Handelson';
-    src: url('Handelson_Six.ttf');
-    font-weight: normal;
+    src: url('../fonts/HandelsonSix_CYR-Six.woff2') format('woff2'),
+    url('../fonts/HandelsonSix_CYR-Six.woff') format('woff');
+    font-weight: 500;
     font-style: normal;
-}
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'RoadRadio';
+    src: url('../fonts/RoadRadio.woff2') format('woff2'),
+    url('../fonts/RoadRadio.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'RoadRadio';
+    src: url('../fonts/RoadRadio-Bold.woff2') format('woff2'),
+    url('../fonts/RoadRadio-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
