--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ h1 {
     z-index: 1;
     position: relative;
     border: none;
+    text-decoration: none
 }
 
 .title_button:hover {
@@ -73,8 +74,8 @@ h1 {
 
 .button_bullet {
     position: absolute;
-    left: 19vw;
-    bottom: 3.5vw;
+    left: 18vw;
+    bottom: 2.5vw;
     width: 4vw;
     height: 3vw;
     z-index: 0;
